package com.miumg.sistemabiblioteca.adapter;

public interface IBook {
    void display();

}



