package com.miumg.sistemabiblioteca.adapter.epub;

public class EpubBook {
    public void displayEpub() {
        System.out.println("Mostrando libro en formato ePub");
    }
}