package com.miumg.sistemabiblioteca.adapter.pdf;

import com.miumg.sistemabiblioteca.adapter.IBook;

public class PdfBook implements IBook {
    public void showPdf() {
        System.out.println("Mostrando libro en formato PDF");
    }

    public void display(){

    }


}