package com.miumg.sistemabiblioteca.bridge.bookdata;

public interface BookData {
    String getContent();
}
