package com.miumg.sistemabiblioteca.bridge.bookdata;

class CloudBookData implements BookData {
    public String getContent() {
        return "Contenido del libro desde la nube";
    }
}