package com.miumg.sistemabiblioteca.composite;

public interface LibraryComponent {
    void showDetails();

}
